--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,5 @@
 [uwsgi]
-module = wsgi:application
+module = main:app
 master = true
 processes = 2
-socket = 127.0.0.1:9000
-chmod-socket = 660
-vacuum = true
-die-on-term = true
+http = :9000
