--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ murmurhash==1.0.10
 nltk==3.9.1
 num2words==0.5.13
 numba==0.60.0
-numpy==1.26.4
+numpy
 packaging==24.2
 pandas==1.5.3
 pillow==11.0.0
